Tue Nov 29 02:23:19 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): Limit KEEP'd symbols to Int and Bool
	types.
	(symFlag): Avoid local/global symbols to be marked for STRONG, KEEP,
	EXPORT or IMPORT.
	* variables.c (declare_var): Tune erorr when symbol was already
	marked for IMPORT, EXPORT, STRONG or KEEP.
	(c_set): Avoid wrong assert when symbol was already marked for
	IMPORT, EXPORT, STRONG or KEEP. 

Sun Nov 27 22:18:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_lnk): Dump literal pool.

Sun Nov 27 21:05:44 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/include/foo-filetypeAB3,ab3,
	regression/tests_pass/include/foo-3bytes.s,
	regression/tests_pass/operator_fileinfo.s: Added.
	* riscos_c.c: Rename to...
	* os.c: ...this.
	(ASFile_Create, ASFile_Free): Add.
	(CanonicalisePath): Make local.
	* os.h (ASFile): Define.
	(ASFile_Create, ASFile_Free): Add prototypes.
	* include.c (Include_Find): Create ASFile version based on Include_Get.
	(Include_Get): Use Include_Find and merge Include_Open in it.
	* include.h (Include_Get): Use ASFile.
	(Include_Find): Add.
	* commands.c (c_incbin): Follow Include_Get API change.
	* filestack.c (FS_PushFilePObject): Likewise.
	* eval.c (evalUnop): Implement Op_fattr, Op_fexec, Op_fload.
	Reimplement Op_fsize.
	* Makefile.am: Follow riscos_c.c to os.c rename.

Sun Nov 27 16:40:56 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c, os.h, local.c, strdup.c, macros.c, input.c, lexAcorn.c,
	filename.c, main.c, eval.c: Add include common.h.
	* variables.c, value.c, strdup.c, macros.c, input.c, get.c, main.c,
	eval.c, lex.c: Remove include os.h.
	* os.h (strndup, strdup, strncasecmp): Move prototypes to...
	* common.h: ...here.
	* lit.c (DEBUG_LIT): Add.

Mon Nov 21 02:23:27 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/macro_args.s: Enhance.
	* macros.c (c_macro): Support vertical bars around macro arguments.
