@@ -1,3 +1,13 @@
+Wed Nov 30 03:05:20 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* commands.c (c_head): Remove.
+	(c_data): Add.
+	* commands.h (c_head): Likewise.
+	(c_data): Add.
+	* decode.c (oDecodeTable): Add DATA.  Remove HEAD, RET, STACK and TAIL. 
+	* m_cpuctrl.c (m_stack, m_ret, m_tail): Remove.
+	* m_cpuctrl.h (m_stack, m_ret, m_tail): Likewise.
+
 Tue Nov 29 02:23:19 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* symbol.c (NeedToOutputSymbol): Limit KEEP'd symbols to Int and Bool
